--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = "3"
+notify-rust = "4.0"
 async-std = "1.10"
 tokio = { version = "1", features = ["full"]}
